<?xml version="1.0" encoding="utf-8"?>

    <ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/titleInput"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/titleInput"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/descriptionInput"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/descriptionInput"
                    android:inputType="text" />

            </LinearLayout>

            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addButton" />

            <Button
                android:id="@+id/secondActivityButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secondActivityButton" />

            <Button
                android:id="@+id/imageActivityButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imageActivityButton" />

        </LinearLayout>

    </ScrollView>